kube/deploy-msrdesciptor.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: descriptor
spec:
  replicas: 1
  selector:
    matchLabels:
      app: descriptor
  template:
    metadata:
      labels:
        app: descriptor
    spec:
      containers:
        - name: descriptor
          image: uover822/msr-descriptor:1
          ports:
            - containerPort: 8015
