kube/deploy-msrproperties.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: properties
spec:
  replicas: 1
  selector:
    matchLabels:
      app: properties
  template:
    metadata:
      labels:
        app: properties
    spec:
      containers:
        - name: properties
          image: uover822/msr-properties:1
          ports:
            - containerPort: 8030
