kube/deploy-msrreason.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reason
spec:
  replicas: 1
  selector:
    matchLabels:
      app: reason
  template:
    metadata:
      labels:
        app: reason
    spec:
      containers:
        - name: reason
          image: uover822/msr-reason:1
          ports:
            - containerPort: 8035
