kube/deploy-msrrelation.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: relation
spec:
  replicas: 1
  selector:
    matchLabels:
      app: relation
  template:
    metadata:
      labels:
        app: relation
    spec:
      containers:
        - name: relation
          image: uover822/msr-relation:1
          ports:
            - containerPort: 8040
