kube/deploy-msrweb.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
        - name: web
          image: uover822/msr-web:1
          ports:
            - containerPort: 8000
#          livenessProbe: null
#            enabled: false
#          readinessProbe: null
#            enabled: false
#          livenessProbe:
#            httpGet:
#              path: /healthy
#              port: 8020
#            initialDelaySeconds: 300       
#            periodSeconds: 30
#            timeoutSeconds: 60
#          readinessProbe:
#            httpGet:
#              path: /healthy
#              port: 8020
#            initialDelaySeconds: 300       
#            periodSeconds: 30
#            timeoutSeconds: 60
          volumeMounts:
            - mountPath: /opt/data
              name: msr-volume
      volumes:
        - name: msr-volume
          persistentVolumeClaim:
            claimName: msr-claim
