kube/svc-msrcontext.yaml
apiVersion: v1
kind: Service
metadata:
  name: context
spec:
  selector:
    app: context
  ports:
    - port: 4567
      name: context
    - port: 7080
      name: metrics
  type: LoadBalancer
  sessionAffinity: ClientIP
