kube/svc-msrdescriptor.yaml
apiVersion: v1
kind: Service
metadata:
  name: descriptor
spec:
  selector:
    app: descriptor
  ports:
    - port: 8015
  type: LoadBalancer
  sessionAffinity: ClientIP
