kube/svc-msrproperties.yaml
apiVersion: v1
kind: Service
metadata:
  name: properties
spec:
  selector:
    app: properties
  ports:
    - port: 8030
  type: LoadBalancer
  sessionAffinity: ClientIP
