kube/svc-msrreason.yaml
apiVersion: v1
kind: Service
metadata:
  name: reason
spec:
  selector:
    app: reason
  ports:
    - port: 8035
  type: LoadBalancer
  sessionAffinity: ClientIP
