kube/svc-msrstore.yaml
apiVersion: v1
kind: Service
metadata:
  name: store
spec:
  selector:
    app: store
  ports:
    - port: 8045
  type: LoadBalancer
  sessionAffinity: ClientIP
