kube/svc-msrweb.yaml
apiVersion: v1
kind: Service
metadata:
  name: web
spec:
  selector:
    app: web
  ports:
    - port: 8000
      targetPort: 8000
  type: LoadBalancer
  sessionAffinity: ClientIP
