kube/ing-msrgrfs.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: latest-grafana
 annotations:
   ingress.kubernetes.io/ssl-redirect: "false"
spec:
 rules:
   - host: latest-grafana
   - http:
       paths:
         - path: /
           pathType: Prefix
           backend:
             service:
               name: latest-grafana
               port:
                 number: 3000
