kube/ing-msrproms.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: latest-prometheus-server
 annotations:
   ingress.kubernetes.io/ssl-redirect: "false"
spec:
 rules:
   - host: latest-prometheus-server
   - http:
       paths:
         - path: /
           pathType: Prefix
           backend:
             service:
               name: latest-prometheus-server
               port:
                 number: 80
