kube/ing-msrweb.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: web
 annotations:
   ingress.kubernetes.io/ssl-redirect: "false"
spec:
 rules:
   - host: web
   - http:
       paths:
         - path: /
           pathType: Prefix
           backend:
             service:
               name: web
               port:
                 number: 8000
